# Worldcoin

./: .gitignore  COPYING  DISCLAIMER.md  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  build.sh  config.h  config.status  configure  configure.ac  configure~  libtool  test.m4
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
contrib/devtools/: fix-copyright-headers.py
contrib/linearize/: linearize-data.py  linearize-hashes.py
doc/: dnsseed-policy.md  gitian-building.md  release-notes-litecoin.md  release-process.md
m4/: aclocal.m4
qa/pull-tester/: run-bitcoind-for-test.sh  tests-config.sh
share/: setup.nsi  setup.nsi.in
share/qt/: Info.plist
src/: Makefile.am  Makefile.in  alert.cpp  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-config.h  bitcoin-tx.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  db.cpp  db.h  eccryptoverify.cpp  eccryptoverify.h  ecwrapper.cpp  ecwrapper.h  hash.cpp  (+64 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: bitcoin-config.h  bitcoin-config.h.in
src/consensus/: consensus.h
src/crypto/: argon2.cpp  argon2.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  scrypt.cpp  scrypt.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/leveldb/: build_detect_platform
src/primitives/: block.cpp  transaction.cpp  transaction.h
src/qt/: bitcoin.cpp  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  guiconstants.h  intro.cpp  networkstyle.cpp  networkstyle.h  optionsmodel.cpp  paymentrequestplus.cpp  paymentrequestplus.h  paymentserver.cpp  paymentserver.h  receivecoinsdialog.cpp  receivecoinsdialog.h  recentrequeststablemodel.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  splashscreen.cpp  splashscreen.h  transactiondesc.cpp  transactionrecord.cpp  transactiontablemodel.cpp  utilitydialog.cpp  utilitydialog.h  walletmodel.cpp  walletmodel.h  winshutdownmonitor.cpp  winshutdownmonitor.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: configure.ac
src/test/: allocator_tests.cpp  base32_tests.cpp  bloom_tests.cpp  compress_tests.cpp  getarg_tests.cpp  key_tests.cpp  main_tests.cpp  mruset_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  serialize_tests.cpp  sigopcount_tests.cpp
tmp/: test_boost  test_boost.cpp
(+58 files in other folders)
